# lc-calculus-llm

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  eval.yaml  mlx_lora.yaml  train_qwen3b.yaml
results/runs/: base_7b.jsonl  finetuned.jsonl  finetuned_7b_v2.jsonl  finetuned_v2.jsonl  ft7b_smoke.jsonl  ft_smoke.jsonl  ft_v2_smoke.jsonl  gpt4o.jsonl  headroom.jsonl
scripts/: compare.py  make_dataset.py  make_figures.py  regrade.py  run_api_eval.py  run_eval.py  run_headroom.py
src/lc_calc/: evaluate.py  generate.py  grader.py  metrics.py  models.py  parsing.py  plots.py  prompts.py
tests/: test_grader.py
